feat: Added auth
