# src/api.yaml
@@ -9,9 +9,18 @@ consumes:
 produces:
   - application/json
 basePath: "/api/reserves"
+securityDefinitions:
+  jwt:
+    type: apiKey
+    name: Authorization
+    in: header
+    x-authentication-scheme: Bearer
+    x-bearerInfoFunc: app.decode_token
 paths:
   /products:
     get:
+      security:
+        - jwt: [ 'secret' ]
       tags: 
         - Reserve
       operationId: app.getAllTransferProducts
@@ -29,6 +38,8 @@ paths:
           description: Not Found
   /products/rent:
     post:
+      security:
+        - jwt: [ 'secret' ]
       tags: 
         - Reserve
       operationId: app.rentTransferProduct
@@ -46,6 +57,8 @@ paths:
           description: Not Found
   /products/rent/pay:
     post:
+      security:
+        - jwt: [ 'secret' ]
       tags: 
         - Reserve
       operationId: app.payTransferProductRent
@@ -63,6 +76,8 @@ paths:
           description: Not Found
   /products/park:
     post:
+      security:
+        - jwt: [ 'secret' ]
       tags: 
         - Reserve
       operationId: app.parkTransferProduct
@@ -80,6 +95,8 @@ paths:
           description: Not Found
   /products/parked/pay:
     post:
+      security:
+        - jwt: [ 'secret' ]
       tags: 
         - Reserve
       operationId: app.payTransferProductPark
